--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,19 +3,15 @@ list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 project(main)
 
-set(CMAKE_CXX_STANDART 14)
-
 include(FetchContent)
 include(glfw)
 include(glew)
+find_package(OpenGL REQUIRED)
 
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations")
 
-# We include our source files here
-add_executable(main src/main.cpp)
-
-# Link the necessary libraries
-find_package(OpenGL REQUIRED)
+add_executable(main)
+target_sources(main PRIVATE src/main.cpp)
 target_include_directories(main PRIVATE ${glew_SOURCE_DIR}/include)
-target_link_libraries(main PRIVATE OpenGL::GL)
-target_link_libraries(main PRIVATE glfw glew)
+target_compile_features(main PRIVATE cxx_std_14)
+target_link_libraries(main PRIVATE OpenGL::GL glfw glew)
